syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "TestLevelSetService";

package TestLevelSets;

service TestLevelSets {
	rpc LoadTestLevelSets(NoParams) returns (ListOfTestLevelSets);
	rpc InsertTestLevelSet(TestLevelSetDiff) returns (TestLevelSet);
	rpc DeleteTestLevelSet(TestLevelSetDiff) returns (NoParams);
	rpc UpdateTestLevelSet(TestLevelSetDiff) returns (NoParams);
	rpc IsTestLevelSetNameUnique(StringResponse) returns (Bool);
	rpc DoesTestLevelSetHaveReferences(TestLevelSet) returns (Bool);
}

message ListOfTestLevelSets {
	repeated TestLevelSet testLevelSets = 1;
}